# LearnMorePythonTheHardWay

./: .gitignore  README.md
Ch1_QuickHacks/: process.md
Ch1_QuickHacks/1.10_sort_v2/: CMakeLists.txt
Ch1_QuickHacks/1.10_sort_v2/src/: main.cpp
Ch1_QuickHacks/1.10_sort_v2/tests/: CMakeLists.txt
Ch1_QuickHacks/1.3_cat/: CMakeLists.txt  TODO.md
Ch1_QuickHacks/1.4_find/: TODO.md
Ch1_QuickHacks/1.5_grep/: TODO.md
Ch1_QuickHacks/1.6_cut/: CMakeLists.txt
Ch1_QuickHacks/1.7_sed/: TODO.md
Ch1_QuickHacks/1.7_sed/src/: main.cpp
Ch1_QuickHacks/1.8_sort/: CMakeLists.txt  TODO.md
Ch1_QuickHacks/1.8_sort/src/: main.cpp
Ch1_QuickHacks/1.9_uniq/: CMakeLists.txt  TODO.md
Ch1_QuickHacks/1.9_uniq/src/: main.cpp
Ch1_QuickHacks/CliStandalone/: CMakeLists.txt  main.cpp
Ch1_QuickHacks/CliWithLib/: CMakeLists.txt  main.cpp
Ch1_QuickHacks/CliWithLib2/: CMakeLists.txt  main.cpp
Ch1_QuickHacks/cat/: main.cpp  research.md
Ch1_QuickHacks/cut/: CMakeLists.txt  TODO.md  test1  test2
Ch1_QuickHacks/cut/src/: main.cpp
Ch1_QuickHacks/find/: CMakeLists.txt
Ch1_QuickHacks/find/src/: main.cpp
Ch1_QuickHacks/grep/: CMakeLists.txt
Ch1_QuickHacks/grep/src/: main.cpp
Ch1_QuickHacks/sed/: CMakeLists.txt
Ch1_QuickHacks/sed/src/: main.cpp
Ch2_DataStructures/2.10_TernaryTree/: CMakeLists.txt
Ch2_DataStructures/2.10_TernaryTree/tests/: test_constructors.cpp  test_lookup.cpp  test_modifiers.cpp  tests_main.cpp
Ch2_DataStructures/2.1_SingleLinkedList/: CMakeLists.txt
Ch2_DataStructures/2.1_SingleLinkedList/src/: single_linked_list.cpp
Ch2_DataStructures/2.1_SingleLinkedList/tests/: CMakeLists.txt  test_constructors.cpp  test_copy_control.cpp  test_destructor.cpp  test_modifiers.cpp
Ch2_DataStructures/2.2_DoubleLinkedList/: CMakeLists.txt
Ch2_DataStructures/2.2_DoubleLinkedList/tests/: test_constructors.cpp  test_modifiers.cpp
Ch2_DataStructures/2.3_QueueStableABI/: CMakeLists.txt
Ch2_DataStructures/2.3_QueueStableABI/src/: Queue.cpp
Ch2_DataStructures/2.3_QueueStableABI/tests/: test_Queue.cpp  tests_main.cpp
Ch2_DataStructures/2.3_StackConcurrent/: CMakeLists.txt
Ch2_DataStructures/2.3_StackConcurrent/src/: ThreadsafeStack.cpp
Ch2_DataStructures/2.3_StackConcurrent/tests/: test_ThreadsafeStack.cpp  tests_main.cpp
Ch2_DataStructures/2.3_StackConcurrent2/: CMakeLists.txt
Ch2_DataStructures/2.3_StackConcurrent2/src/: ThreadsafeStack.cpp
Ch2_DataStructures/2.3_StackConcurrent2/tests/: test_constructors.cpp  test_modifiers.cpp
Ch2_DataStructures/2.3_StackStableABI/: CMakeLists.txt
Ch2_DataStructures/2.3_StackStableABI/src/: Stack.cpp
Ch2_DataStructures/2.3_StackStableABI/tests/: test_Stack.cpp
Ch2_DataStructures/2.3_ThreadsafeQueue/: CMakeLists.txt
Ch2_DataStructures/2.3_ThreadsafeQueue/src/: ThreadsafeQueue.cpp
Ch2_DataStructures/2.3_ThreadsafeQueue/tests/: test_ThreadsafeQueue.cpp  tests_main.cpp
Ch2_DataStructures/2.4_BubbleSort/tests/: test_modifiers.cpp
Ch2_DataStructures/2.4_HashMap/: CMakeLists.txt
Ch2_DataStructures/2.4_HashMap/src/: ThreadsafeHashMap.cpp
Ch2_DataStructures/2.4_HashMap/tests/: tests_main.cpp
Ch2_DataStructures/2.4_MergeSort/src/: DoubleLinkedList.cpp
Ch2_DataStructures/2.4_MergeSort/tests/: test_modifiers.cpp
Ch2_DataStructures/2.4_ThreadsafeHashMap/tests/: test_ThreadsafeHashMap.cpp
Ch2_DataStructures/2.4_UnorderedMap/: CMakeLists.txt
Ch2_DataStructures/2.4_UnorderedMap/src/: UnorderedMap.cpp
Ch2_DataStructures/2.4_UnorderedMap/tests/: test_constructors.cpp  test_modifiers.cpp  tests_main.cpp
Ch2_DataStructures/2.4_UnorderedMap2/tests/: CMakeLists.txt  test_constructors.cpp  test_iterators.cpp  test_lookup.cpp  test_modifiers.cpp  tests_main.cpp
Ch2_DataStructures/2.4_UnorderedMap_StableABI/: CMakeLists.txt
Ch2_DataStructures/2.4_UnorderedMap_StableABI/tests/: CMakeLists.txt  profile.cpp  test_constructors.cpp  test_iterators.cpp  test_modifiers.cpp
Ch2_DataStructures/2.7_BinaryTree/: CMakeLists.txt
Ch2_DataStructures/2.7_BinaryTree/tests/: test_constructors.cpp  test_iterators.cpp  test_modifiers.cpp  tests_main.cpp
Ch2_DataStructures/2.8_BinarySearch/: CMakeLists.txt
Ch2_DataStructures/2.8_BinarySearch/tests/: test_binarysearch.cpp  tests_main.cpp
Ch2_DataStructures/2.9_SuffixArray_BsTree/: CMakeLists.txt
Ch3_IntermediateProjects/: process.md
Ch3_IntermediateProjects/3.1_xargs/: CMakeLists.txt  TODO.md
Ch3_IntermediateProjects/3.2.2_hexdump/: CMakeLists.txt  TODO.md
Ch3_IntermediateProjects/3.2_hexdump/: CMakeLists.txt  TODO.md
Ch3_IntermediateProjects/3.3_tr/: CMakeLists.txt  TODO.md
Ch3_IntermediateProjects/3.4_sh/: CMakeLists.txt
Ch3_IntermediateProjects/3.4_sh/include/: Keywords.h  Sh.h  Token.h  TokenStream.h
Ch3_IntermediateProjects/3.4_sh/src/: Sh.cpp  TokenStream.cpp  main.cpp
Ch3_IntermediateProjects/3.4_sh/tests/: CMakeLists.txt  test_Token.cpp  test_TokenStream.cpp
Ch3_IntermediateProjects/3.5_diff_patch/: CMakeLists.txt
Ch4_ParsingText/4.1.2_FinalStateMachines_Tables/: CMakeLists.txt
Ch4_ParsingText/4.1.2_FinalStateMachines_Tables/src/: basic.cpp
Ch4_ParsingText/4.1.3_FinalStateMachines_StatePattern/: CMakeLists.txt
Ch4_ParsingText/4.1.3_FinalStateMachines_StatePattern/src/: basic.cpp  stateful.cpp
Ch4_ParsingText/4.1.4_FinalStateMachines_Cpp/: CMakeLists.txt
Ch4_ParsingText/4.1_FinalStateMachines_SwitchCase/: CMakeLists.txt
Ch4_ParsingText/4.2_Regular_Expressions/: CMakeLists.txt
Ch4_ParsingText/4.3_Scanners/: CMakeLists.txt
Ch4_ParsingText/4.4_FinalStateMachines_Cpp/: CMakeLists.txt
Ch4_ParsingText/4.4_FinalStateMachines_Cpp/src/: state_crtp_2.cpp
Ch4_ParsingText/4.5_Analyzers/: CMakeLists.txt  run_cppcheck.sh
Ch4_ParsingText/4.6_Interpreters/: CMakeLists.txt  TODO.md
Ch4_ParsingText/4.6_Interpreters/include/: Interpreter.h  Parser.h  Production.h  PunyPyWorld.h
Ch4_ParsingText/4.6_Interpreters/src/: Parser.cpp  Production.cpp  PunyPyWorld.cpp  main.cpp
Ch4_ParsingText/hack/: CMakeLists.txt
libjam/: CMakeLists.txt
libjam/src/: jam.cpp
libjam/tests/: test_predicates.cpp  test_sort_lines.cpp
(+89 files in other folders)
